--- a/chuche-proyect--/.godot/editor/project_metadata.cfg
+++ b/chuche-proyect--/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/nemer/OneDrive/Desktop/Godot_v4.4-stable_win64.exe"
+executable_path="/home/usuario/Desktop/Godot_v4.4-stable_linux.x86_64"
 use_advanced_connections=false
 
 [debug_options]
@@ -18,7 +18,7 @@ scripts=["res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/shooter/m
 Node2D:scale=true
 CharacterBody2D:scale=true
 StaticBody2D:scale=true
-CollisionShape2D:scale=false
+CollisionShape2D:scale=true
 Sprite2D:scale=true
 Control:scale=true
 HBoxContainer:scale=true
@@ -29,7 +29,7 @@ AnimationTrackKeyEdit:value=true
 [dialog_bounds]
 
 create_new_node=Rect2(123, 37, 900, 700)
-project_settings=Rect2(360, 190, 1200, 700)
+project_settings=Rect2(-90, 155, 1022, 700)
 search_help=Rect2(480, 270, 960, 540)
 
 [script_setup]
