termine de programar los disparosdel shooter ahora estoy agregando vidas y sentido de recibir daño a los enemigos y estoy haciendo un sistema para atacar para el jugador

--- a/chuche-proyect--/.godot/editor/script_editor_cache.cfg
+++ b/chuche-proyect--/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 11,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 31,
+"h_scroll_position": 0,
 "row": 17,
-"scroll_position": 6.0,
-"selection": false,
+"scroll_position": 5.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 17,
+"selection_to_column": 11,
+"selection_to_line": 17,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 37,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 29,
-"scroll_position": 16.0,
+"h_scroll_position": 104,
+"row": 48,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 36.0,
+"row": 12,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +67,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 93,
-"scroll_position": 84.0,
-"selection": false,
+"row": 4,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 18,
+"selection_from_line": 4,
+"selection_to_column": 25,
+"selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
