--- a/chuche-proyect--/.godot/editor/project_metadata.cfg
+++ b/chuche-proyect--/.godot/editor/project_metadata.cfg
@@ -18,7 +18,7 @@ scripts=["res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/shooter/m
 Node2D:scale=true
 CharacterBody2D:scale=true
 StaticBody2D:scale=true
-CollisionShape2D:scale=true
+CollisionShape2D:scale=false
 Sprite2D:scale=true
 Control:scale=true
 HBoxContainer:scale=true
@@ -30,7 +30,7 @@ AnimationTrackKeyEdit:value=true
 
 create_new_node=Rect2(123, 37, 900, 700)
 project_settings=Rect2(1, 37, 1022, 700)
-search_help=Rect2(480, 270, 960, 540)
+search_help=Rect2(63, 197, 960, 540)
 
 [script_setup]
 
@@ -45,3 +45,8 @@ resave_paths=PackedStringArray()
 
 embed_on_play=true
 make_floating_on_play=true
+embed_size_mode=2
+
+[quick_open_dialog]
+
+last_mode=1
