--- a/chuche-proyect--/.godot/editor/editor_layout.cfg
+++ b/chuche-proyect--/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objetos/characters/rico/rico.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objetos/", "res://objetos/characters/", "res://objetos/characters/shooter/", "res://objetos/characters/rico/", "res://mundos/")
+dock_filesystem_selected_paths=PackedStringArray("res://mundos/mundo guiso/placeholderBG.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objetos/", "res://objetos/characters/", "res://objetos/characters/shooter/", "res://objetos/characters/rico/", "res://mundos/", "res://mundos/mundo guiso/")
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -35,18 +35,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/evilNpc/evilGodottscn.tscn", "res://objetos/characters/rico/rico.tscn", "res://objetos/characters/shooter/shooter.tscn", "res://objetos/items/bullet/bullet.tscn")
-current_scene="res://mundos/mundo guiso/nivel_0.tscn"
-center_split_offset=-257
+current_scene="res://objetos/characters/shooter/shooter.tscn"
+center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://objetos/items/bullet/bullet.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/characters/rico/lives.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/characters/shooter/shooter.gd"]
-selected_script="res://objetos/items/bullet/bullet.gd"
+selected_script="res://objetos/characters/evilNpc/evilNPC.gd"
 open_help=[]
-script_split_offset=199
+script_split_offset=116
 list_split_offset=0
 zoom_factor=1.34615
 
@@ -61,11 +60,11 @@ text_shader_zoom_factor=1.0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 29)
+position=Vector2i(0, 62)
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 145, 1164, 695)
+floating_window_rect=Rect2i(1, 62, 1022, 677)
 floating_window_screen=0
 
 [editor_log]
