--- a/chuche-proyect--/.godot/editor/project_metadata.cfg
+++ b/chuche-proyect--/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="D:/J.Mateo/Escuela/2025/Gordot/Godot_v4.4.1-stable_win64.exe"
+executable_path="/home/usuario/Scripts/Godot/Godot_v4.4-stable_linux.x86_64"
 use_advanced_connections=false
 
 [debug_options]
@@ -28,7 +28,7 @@ AnimationTrackKeyEdit:value=true
 
 [dialog_bounds]
 
-create_new_node=Rect2(123, 37, 900, 700)
+create_new_node=Rect2(123, 62, 900, 677)
 project_settings=Rect2(1, 37, 1022, 700)
 search_help=Rect2(63, 197, 960, 540)
 
