--- a/chuche-proyect--/.godot/editor/script_editor_cache.cfg
+++ b/chuche-proyect--/.godot/editor/script_editor_cache.cfg
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 47,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 47,
-"selection_to_column": 5,
-"selection_to_line": 47,
+"scroll_position": 38.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -39,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 98,
-"scroll_position": 95.0,
+"scroll_position": 80.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -53,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 5.0,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,15 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 30.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 41,
-"selection_to_column": 7,
-"selection_to_line": 41,
+"row": 13,
+"scroll_position": 6.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
