--- a/chuche-proyect--/.godot/editor/editor_layout.cfg
+++ b/chuche-proyect--/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_2=269
+dock_hsplit_3=-269
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objetos/characters/rico/rico.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://objetos/dialogue-box/textbox.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://sprites/mundo 0/", "res://sprites/characters/", "res://sprites/characters/mundo 0/", "res://sprites/characters/mundo 0/items/", "res://objetos/", "res://objetos/dialogue-box/", "res://objetos/characters/", "res://objetos/characters/shooter/", "res://objetos/characters/rico/", "res://objetos/characters/evilNpc/", "res://mundos/", "res://mundos/mundo guiso/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -34,20 +34,20 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/rico/rico.tscn")
-current_scene="res://objetos/characters/rico/rico.tscn"
+open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/rico/rico.tscn", "res://objetos/dialogue-box/textbox.tscn")
+current_scene="res://objetos/dialogue-box/textbox.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=9
+selected_main_editor_idx=2
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
 <<<<<<<Updatedupstreamopen_scripts=["res://objetos/items/bullet/bullet.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/characters/rico/lives.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/characters/shooter/shooter.gd", "res://objetos/dialogue-box/textbox.gd"]
-selected_script=""
-open_scripts=[]
+selected_script="res://objetos/dialogue-box/textbox.gd"
+open_scripts=["res://objetos/dialogue-box/textbox.gd"]
 open_help=[]
-script_split_offset=200
+script_split_offset=75
 list_split_offset=0
 zoom_factor=1.0
 
@@ -55,11 +55,11 @@ zoom_factor=1.0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 29)
+position=Vector2i(0, 62)
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 145, 1164, 695)
+floating_window_rect=Rect2i(1, 62, 1022, 677)
 floating_window_screen=0
 
 [ShaderEditor]
