--- a/chuche-proyect--/.godot/editor/script_editor_cache.cfg
+++ b/chuche-proyect--/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,79 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 42,
-"scroll_position": 41.0,
+"scroll_position": 39.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://objetos/characters/rico/rico.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 16.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 24,
+"selection_to_column": 32,
+"selection_to_line": 28,
+"syntax_highlighter": "GDScript"
+}
+
+[res://objetos/characters/evilNpc/evilNPC.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 8,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 27.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 14,
+"selection_to_column": 8,
+"selection_to_line": 14,
+"syntax_highlighter": "GDScript"
+}
+
+[res://mundos/Batalla/battalla.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 43,
+"selection_to_line": 3,
+"syntax_highlighter": "GDScript"
+}
+
+[res://mundos/Batalla/buttons.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 20,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 7.0,
+"selection": true,
+"selection_from_column": 16,
+"selection_from_line": 20,
+"selection_to_column": 20,
+"selection_to_line": 20,
 "syntax_highlighter": "GDScript"
 }
