--- a/chuche-proyect--/.godot/editor/editor_layout.cfg
+++ b/chuche-proyect--/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://sprites/characters/mundo 0/items/", "res://objetos/", "res://objetos/characters/shooter/")
+dock_filesystem_selected_paths=PackedStringArray("res://objetos/dialogue-box/textbox.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/characters/", "res://sprites/characters/EvilNpcs/", "res://objetos/", "res://objetos/dialogue-box/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -34,20 +34,20 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/rico/rico.tscn", "res://objetos/dialogue-box/textbox.tscn", "res://mundos/Batalla/Battalla.tscn")
-current_scene="res://mundos/mundo guiso/nivel_0.tscn"
+open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/rico/rico.tscn", "res://mundos/Batalla/Battalla.tscn", "res://objetos/interfas/battel/Fight.tscn", "res://objetos/characters/evilNpc/evilGodottscn.tscn", "res://objetos/dialogue-box/textbox.tscn")
+current_scene="res://objetos/dialogue-box/textbox.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
 <<<<<<<Updatedupstreamopen_scripts=["res://objetos/items/bullet/bullet.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/characters/rico/lives.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/characters/shooter/shooter.gd", "res://objetos/dialogue-box/textbox.gd"]
-selected_script="res://mundos/Batalla/buttons.gd"
-open_scripts=["res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/buttons.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/dialogue-box/textbox.gd"]
-open_help=[]
-script_split_offset=75
+selected_script="res://objetos/dialogue-box/textbox.gd"
+open_scripts=["res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/buttons.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/interfas/battel/fight.gd", "res://Global/Global_ToFight.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/dialogue-box/textbox.gd"]
+open_help=["Node2D"]
+script_split_offset=100
 list_split_offset=0
 zoom_factor=1.0
 
@@ -55,11 +55,11 @@ zoom_factor=1.0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 35)
+position=Vector2i(0, 23)
 
 [GameView]
 
-floating_window_rect=Rect2i(1, 35, 1022, 465)
+floating_window_rect=Rect2i(378, 151, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
