los botones para el modo lucha ya abren menus con opciones para que podamos iniciar a hacer las acciones

--- a/chuche-proyect--/.godot/editor/editor_layout.cfg
+++ b/chuche-proyect--/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objetos/dialogue-box/textbox.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/characters/", "res://sprites/characters/EvilNpcs/", "res://objetos/", "res://objetos/dialogue-box/")
+dock_filesystem_selected_paths=PackedStringArray("res://fonts/BodgeR.ttf")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/characters/", "res://sprites/characters/EvilNpcs/", "res://fonts/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -34,22 +34,22 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/rico/rico.tscn", "res://mundos/Batalla/Battalla.tscn", "res://objetos/interfas/battel/Fight.tscn", "res://objetos/characters/evilNpc/evilGodottscn.tscn", "res://objetos/dialogue-box/textbox.tscn")
-current_scene="res://objetos/dialogue-box/textbox.tscn"
+open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/rico/rico.tscn", "res://mundos/Batalla/Battalla.tscn", "res://objetos/characters/evilNpc/evilGodottscn.tscn", "res://objetos/interfas/battel/Fight.tscn", "res://objetos/dialogue-box/textbox.tscn")
+current_scene="res://objetos/interfas/battel/Fight.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 <<<<<<<Updatedupstreamopen_scripts=["res://objetos/items/bullet/bullet.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/characters/rico/lives.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/characters/shooter/shooter.gd", "res://objetos/dialogue-box/textbox.gd"]
-selected_script="res://objetos/dialogue-box/textbox.gd"
+selected_script="res://objetos/interfas/battel/fight.gd"
 open_scripts=["res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/buttons.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/interfas/battel/fight.gd", "res://Global/Global_ToFight.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/dialogue-box/textbox.gd"]
 open_help=["Node2D"]
 script_split_offset=100
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.125
 
 [EditorWindow]
 
