inicio de la creacion del cerebro del enemigo durante la batalla

--- a/chuche-proyect--/.godot/editor/editor_layout.cfg
+++ b/chuche-proyect--/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://fonts/BodgeR.ttf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/characters/", "res://sprites/characters/EvilNpcs/", "res://fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://mundos/Batalla/Enemys_brain.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objetos/interfas/battel/", "res://objetos/characters/shooter/", "res://mundos/", "res://mundos/Batalla/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -34,8 +34,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/rico/rico.tscn", "res://mundos/Batalla/Battalla.tscn", "res://objetos/characters/evilNpc/evilGodottscn.tscn", "res://objetos/interfas/battel/Fight.tscn", "res://objetos/dialogue-box/textbox.tscn")
-current_scene="res://objetos/interfas/battel/Fight.tscn"
+open_scenes=PackedStringArray("res://mundos/mundo guiso/nivel_0.tscn", "res://objetos/characters/rico/rico.tscn", "res://objetos/dialogue-box/textbox.tscn", "res://mundos/Batalla/Battalla.tscn")
+current_scene="res://mundos/mundo guiso/nivel_0.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -44,22 +44,22 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 <<<<<<<Updatedupstreamopen_scripts=["res://objetos/items/bullet/bullet.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/characters/rico/lives.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/characters/shooter/shooter.gd", "res://objetos/dialogue-box/textbox.gd"]
-selected_script="res://objetos/interfas/battel/fight.gd"
-open_scripts=["res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/buttons.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/interfas/battel/fight.gd", "res://Global/Global_ToFight.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/dialogue-box/textbox.gd"]
-open_help=["Node2D"]
-script_split_offset=100
+selected_script="res://mundos/Batalla/Enemys_brain.gd"
+open_scripts=["res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/buttons.gd", "res://mundos/Batalla/Enemys_brain.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/interfas/battel/fight.gd", "res://Global/Global_ToFight.gd", "res://objetos/characters/rico/rico.gd"]
+open_help=[]
+script_split_offset=75
 list_split_offset=0
-zoom_factor=1.125
+zoom_factor=1.0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 23)
+position=Vector2i(0, 35)
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 151, 1164, 695)
+floating_window_rect=Rect2i(1, 35, 829, 375)
 floating_window_screen=0
 
 [ShaderEditor]
