--- a/chuche-proyect--/.godot/editor/script_editor_cache.cfg
+++ b/chuche-proyect--/.godot/editor/script_editor_cache.cfg
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -31,16 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 55.0,
+"row": 69,
+"scroll_position": 58.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 24,
-"selection_to_column": 32,
-"selection_to_line": 28,
+"selection_from_column": 39,
+"selection_from_line": 69,
+"selection_to_column": 43,
+"selection_to_line": 69,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,12 +49,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
-"scroll_position": 27.0,
-"selection": false,
+"row": 1,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 1,
+"selection_to_column": 17,
+"selection_to_line": 27,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,12 +67,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 13,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 13,
+"selection_from_line": 13,
+"selection_to_column": 23,
+"selection_to_line": 13,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,11 +85,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 71,
-"scroll_position": 48.0,
+"scroll_position": 64.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://objetos/interfas/battel/fight.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 3,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -94,26 +116,30 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 6,
 "scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 8,
+"selection_from_line": 6,
 "selection_to_column": 1,
 "selection_to_line": 9,
 "syntax_highlighter": "GDScript"
 }
 
-[res://objetos/interfas/battel/fight.gd]
+[res://mundos/Batalla/Enemys_brain.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 3,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 11,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
