--- a/chuche-proyect--/.godot/editor/script_editor_cache.cfg
+++ b/chuche-proyect--/.godot/editor/script_editor_cache.cfg
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 69,
-"scroll_position": 58.0,
-"selection": true,
-"selection_from_column": 39,
-"selection_from_line": 69,
-"selection_to_column": 43,
-"selection_to_line": 69,
+"row": 13,
+"scroll_position": 1.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,16 +45,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 1,
-"selection_to_column": 17,
-"selection_to_line": 27,
+"row": 42,
+"scroll_position": 29.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -67,16 +59,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 47,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 13,
-"selection_to_column": 23,
-"selection_to_line": 13,
+"row": 27,
+"scroll_position": 9.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -85,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 71,
-"scroll_position": 64.0,
+"row": 87,
+"scroll_position": 71.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -99,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 6.0,
+"row": 20,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -113,16 +101,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 8,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 6,
-"selection_to_column": 1,
-"selection_to_line": 9,
+"selection_from_column": 4,
+"selection_from_line": 8,
+"selection_to_column": 11,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
 
@@ -131,15 +119,29 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
+"row": 16,
+"scroll_position": 3.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 3,
-"selection_to_column": 11,
-"selection_to_line": 3,
+"selection_from_column": 4,
+"selection_from_line": 16,
+"selection_to_column": 39,
+"selection_to_line": 16,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Global/Game_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 29,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 3.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
