--- a/chuche-proyect--/.godot/global_script_class_cache.cfg
+++ b/chuche-proyect--/.godot/global_script_class_cache.cfg
@@ -1,1 +1,17 @@
-list=[]
+list=[{
+"base": &"RefCounted",
+"class": &"Attack",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scrips/Classes/Attacks.gd"
+}, {
+"base": &"Resource",
+"class": &"Enemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scrips/Classes/Characters.gd"
+}]
