--- a/chuche-proyect--/.godot/editor/script_editor_cache.cfg
+++ b/chuche-proyect--/.godot/editor/script_editor_cache.cfg
@@ -33,7 +33,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 35,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 19,
 "row": 13,
 "scroll_position": 0.0,
 "selection": true,
@@ -51,9 +51,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 52,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 57,
+"h_scroll_position": 0,
 "row": 39,
-"scroll_position": 29.0,
+"scroll_position": 35.0,
 "selection": true,
 "selection_from_column": 26,
 "selection_from_line": 39,
@@ -67,11 +67,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 69,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 12.0,
+"row": 24,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -81,11 +81,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 7.60839,
+"row": 16,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -98,27 +98,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Global/Global_ToFight.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 47,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 13,
-"scroll_position": 3.0,
-"selection": true,
-"selection_from_column": 3,
-"selection_from_line": 13,
-"selection_to_column": 47,
-"selection_to_line": 13,
 "syntax_highlighter": "GDScript"
 }
 
@@ -127,16 +109,20 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 12.0,
-"selection": false,
+"row": 26,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 26,
+"selection_to_column": 22,
+"selection_to_line": 27,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Global/Game_state.gd]
+[res://Scrips/Global/Game_state.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -145,7 +131,85 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 2,
-"scroll_position": 3.0,
+"scroll_position": 6.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scrips/Global/Global_ToFight.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 11,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scrips/Classes/Attacks.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scrips/Classes/Characters.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 8,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 4,
+"selection_to_column": 8,
+"selection_to_line": 4,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scrips/Loads/Load_Enemys_Attacks.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 2.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 8,
+"selection_to_column": 30,
+"selection_to_line": 8,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scrips/Loads/Load_Enemys.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
